init/file/iptables
*raw
:PREROUTING ACCEPT [116163:9327716]
:OUTPUT ACCEPT [104076:12500201]
-A PREROUTING -p tcp -m multiport --dport 80,443 -j NOTRACK
-A OUTPUT -p tcp -m multiport --sport 80,443 -j NOTRACK
COMMIT
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state ESTABLISHED,RELATED,UNTRACKED -j ACCEPT
-A FORWARD -m state --state UNTRACKED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -s 10.79.0.0/16 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -j ACCEPT
-A OUTPUT -d 10.79.0.0/16 -j ACCEPT
COMMIT
